--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ group = 'com.kuzmin'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+ext {
+    set('testcontainersVersion', "1.16.0")
+}
+
 repositories {
     mavenCentral()
 }
@@ -20,6 +24,14 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:postgresql'
+    testImplementation 'org.testcontainers:r2dbc'
+
+    annotationProcessor 'org.projectlombok:lombok'
+
+    runtimeOnly 'org.flywaydb:flyway-core'
+    runtimeOnly 'org.springframework:spring-jdbc'
 
     swaggerCodegen 'org.openapitools:openapi-generator-cli:5.2.0'
     compileOnly 'io.swagger:swagger-annotations:1.6.3'
@@ -35,21 +47,11 @@ test {
 }
 
 swaggerSources {
-    def typeMappings = 'URI=URI, BigDecimal=BigDecimal, EntityModel=EntityModel'
-    def importMappings = 'URI=java.net.URI, BigDecimal=java.math.BigDecimal, EntityModel=org.springframework.hateoas.EntityModel'
     users {
-        def apiYaml = "${rootDir}/src/main/resources/api/users.yaml"
-        def configJson = "${rootDir}/src/main/resources/api/config.json"
-        inputFile = file(apiYaml)
-        def ignoreFile = file("${rootDir}/src/main/resources/api/.openapi-generator-ignore")
+        inputFile = file("${rootDir}/src/main/resources/api/users.yaml")
         code {
             language = 'spring'
-            configFile = file(configJson)
-            rawOptions = ['--ignore-file-override', ignoreFile, '--type-mappings',
-                          typeMappings, '--import-mappings', importMappings] as List<String>
-            components = [models: true, apis: true, supportingFiles: 'ApiUtil.java']
-            //templateDir = file("${rootDir}/src/main/resources/templates")
-            //dependsOn validation // Should be uncommented once plugin starts supporting OA 3 validation
+            configFile = file("${rootDir}/src/main/resources/api/config.json")
         }
     }
 }
@@ -57,3 +59,14 @@ swaggerSources {
 compileJava.dependsOn swaggerSources.users.code
 sourceSets.main.java.srcDir "${swaggerSources.users.code.outputDir}/src/main/java"
 sourceSets.main.resources.srcDir "${swaggerSources.users.code.outputDir}/src/main/resources"
+
+dependencyManagement {
+    imports {
+        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+    }
+}
+
+bootBuildImage {
+    imageName = "kuzmin35/${project.name}:${project.version}"
+    environment = ["BP_JVM_VERSION" : "17.*"]
+}
