--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,15 @@
-
+server:
+  port: 9003
+  netty:
+    connection-timeout: 5s
+  shutdown: graceful
+spring:
+  lifecycle:
+    timeout-per-shutdown-phase: 15s
+  r2dbc:
+    pool:
+      max-create-connection-time: 5s
+      initial-size: 5
+      max-size: 10
+  profiles:
+    active: local
